overflow bug fixed

--- a/style.css
+++ b/style.css
@@ -38,12 +38,16 @@ a {
   color: var(--nav-text-color);
 }
 
-body{
-  overflow-x: hidden;
-}
 html,body {
   background-color: var(--body-background-color);
   font-family: "nunito", sans-serif;
+  width:100%;
+  height: 100%;
+}
+
+.wrapper{
+  overflow-x:hidden;
+  position:relative;
   width:100%;
   height: 100%;
 }
